checker/src/test/resources/test-cases/nullness-array-gradual-global-override/LegacyArrayTrojan.java
public class LegacyArrayTrojan extends SafeArrayContract {

    @Override
    public void acceptArray(String[] input) {}

    @Override
    public String[] getArray() {
        return null;
        // :: error: (Return value of overridden method getArray must be NonNull)
    }
}
